@@ -511,6 +511,14 @@ SEXP char_frequency(
 		SEXP x_length
 );
 
+SEXP multinucleotide_frequency(
+		SEXP x_xp,
+		SEXP x_offset,
+		SEXP x_length,
+		SEXP base_codes,
+		SEXP width
+);
+
 
 /* normalize_views.c */
 
